<resources>
    <string name="app_name">PM_MAL_PR01</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Empleados</string>
    <string name="nav_header_subtitle">upiiz ipn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nombre_boton">Ingresar</string>
    <string name="boton_alta">Guardar</string>
    <string name="boton_actualizar">Actualizar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="ingresar_nombre">Digite un nombre</string>
    <string name="ingresar_usuario">Digite un usuario</string>
    <string name="ingresar_clave">Digite una clave</string>
</resources>