<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Editar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/tamano_layout"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Nombre: "
            android:textColor="@color/letrasRojas"
            android:textStyle="bold"
            android:textSize="@dimen/tamano_texto2" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ingresar_nombre" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Usuario: "
            android:textColor="@color/letrasRojas"
            android:textStyle="bold"
            android:textSize="@dimen/tamano_texto2" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ingresar_usuario" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Clave: "
            android:textColor="@color/letrasRojas"
            android:textStyle="bold"
            android:textSize="@dimen/tamano_texto2" />

        <EditText
            android:id="@+id/clave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ingresar_clave" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/tamano_layout"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/colorBoton"
            android:text="@string/boton_eliminar"
            android:textColor="@color/colorLetrasBoton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:orientation="vertical">
        </LinearLayout>

        <Button
            android:id="@+id/actualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorBoton"
            android:text="@string/boton_actualizar"
            android:textColor="@color/colorLetrasBoton" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:orientation="vertical">
        </LinearLayout>


        <Button
            android:id="@+id/cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorBoton"
            android:text="@string/boton_cancelar"
            android:textColor="@color/colorLetrasBoton" />

    </LinearLayout>

</LinearLayout>